# BSUIR-POIT-4-YEAR-8-SEMESTER-LABS

./: .gitignore  README.md  shell.nix
PIRIS/: 1.docx  2.docx  Cargo.toml
PIRIS/sql/: create_bank_admin.sql  create_tables.sql  delete_user.sql  dump.sql  initialize_tables.sql  insert_new_user.sql  populate_users.sql  rust_sql_config.txt  select_deposit_program.sql  select_deposit_program_data.sql  select_listed_user.sql  select_whole_user.sql  update_user.sql
PIRIS/src/: main.rs
PIRIS/src/forms/: add_user.rs  common.rs  field.rs  list_users.rs  main.rs  mod.rs  modify_user.rs  user.rs  widget.rs
PIRIS/src/forms/deposit/: add_deposit.rs  mod.rs
PIRIS/src/state/: common.rs  mod.rs  user.rs  utils.rs  validation.rs
PIRIS/src/state/deposit/: add_deposit.rs  mod.rs
