[package]
name = "lab1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["date_picker"] }
strum = "0.23.0"
strum_macros = "0.23.0"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"] }
postgres-derive = "0.4.1"
chrono = { version = "0.4" }
arrayref = "0.3.6"
